...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BMY-8U-rob" userLabel="Like Button">
                                                    <rect key="frame" x="356" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="fVo-O9-Lh8"/>
                                                        <constraint firstAttribute="height" constant="44" id="ua4-jL-7cs"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="PPU-HF-nYh" id="DsA-GX-QSP"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="afR-QT-v2H">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="fgf-fd-8fo"/>
                                    <constraint firstAttribute="height" constant="48" id="oUk-xm-VUP"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_button_back_wht"/>
...
                                <rect key="frame" x="177" y="425" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="WM1-cN-oM4"/>
                                    <constraint firstAttribute="height" constant="60" id="zmN-YC-wiw"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y3r-F1-f6s">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="Color"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="6LB-Dk-0Ni"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="fJ0-ds-pcg" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="FHz-Na-OSe">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="m61-eu-qr2">
                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
