...
    private func setLogoutButton() {
        logoutButton = UIButton.systemButton(
            with: UIImage(named: "logout_button")!,
            target: self,
            action: #selector(self.didTapLogoutButton)
        )
        logoutButton.accessibilityIdentifier = "logout button"
        logoutButton.tintColor = Constants.ypRed
        view.addSubview(logoutButton)
        logoutButton.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            logoutButton.heightAnchor.constraint(equalToConstant: 44),
            logoutButton.widthAnchor.constraint(equalToConstant: 44),
...
    private func didTapLogoutButton() {
        showLogout()
    }
    
    private func showLogout() {
        alertPresenter.showAlertForLogout(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйдти?") { [weak self] in
                guard let self = self else { return }
                presenter?.cleanTokenAndCookie()
                switchToSplashViewController()
            }
    }
...
